Ars Magica 5th: fix i18n tag

--- a/Ars_Magica_5th/Ars_Magica_5th.html
+++ b/Ars_Magica_5th/Ars_Magica_5th.html
@@ -407,49 +407,49 @@
                             <td><input type="text" class="sheet-heading_2" name="attr_Perception_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Perception_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Perception_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Perception" value="&{template:ability} {{name= @{character_name}}} {{label0=Perception}} {{banner=@{Perception_Description}}} {{label1=^{score}}} {{result1=@{Perception_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Perception_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Perception" value="&{template:ability} {{name= @{character_name}}} {{label0=Perception}} {{banner=@{Perception_Description}}} {{label1=^{score}}} {{result1=@{Perception_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Perception_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="strength" >Strength</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Strength_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Strength_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Strength_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Strength" value="&{template:ability} {{name= @{character_name}}} {{label0=^{strength}}} {{banner=@{Strength_Description}}} {{label1=^{score}}} {{result1=@{Strength_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Strength_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Strength" value="&{template:ability} {{name= @{character_name}}} {{label0=^{strength}}} {{banner=@{Strength_Description}}} {{label1=^{score}}} {{result1=@{Strength_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Strength_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="stamina" >Stamina</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Stamina_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Stamina_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Stamina_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Stamina" value="&{template:ability} {{name= @{character_name}}} {{label0=^{stamina}}} {{banner=@{Stamina_Description}}} {{label1=^{score}}} {{result1=@{Stamina_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Stamina_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Stamina" value="&{template:ability} {{name= @{character_name}}} {{label0=^{stamina}}} {{banner=@{Stamina_Description}}} {{label1=^{score}}} {{result1=@{Stamina_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Stamina_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="presence" >Presence</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Presence_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Presence_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Presence_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Presence" value="&{template:ability} {{name= @{character_name}}} {{label0=^{presence}}} {{banner=@{Presence_Description}}} {{label1=^{score}}} {{result1=@{Presence_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Presence_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Presence" value="&{template:ability} {{name= @{character_name}}} {{label0=^{presence}}} {{banner=@{Presence_Description}}} {{label1=^{score}}} {{result1=@{Presence_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Presence_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="communication" >Communication</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Communication_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Communication_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Communication_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Communication" value="&{template:ability} {{name= @{character_name}}} {{label0=^{communication}}} {{banner=@{Communication_Description}}} {{label1=^{score}}} {{result1=@{Communication_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Communication_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Communication" value="&{template:ability} {{name= @{character_name}}} {{label0=^{communication}}} {{banner=@{Communication_Description}}} {{label1=^{score}}} {{result1=@{Communication_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Communication_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="dexterity" >Dexterity</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Dexterity_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Dexterity_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Dexterity_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Dexterity" value="&{template:ability} {{name= @{character_name}}} {{label0=^{dexterity}}} {{banner=@{Dexterity_Description}}} {{label1=^{score}}} {{result1=@{Dexterity_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Dexterity_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Dexterity" value="&{template:ability} {{name= @{character_name}}} {{label0=^{dexterity}}} {{banner=@{Dexterity_Description}}} {{label1=^{score}}} {{result1=@{Dexterity_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Dexterity_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                         <tr>
                             <th data-i18n="quickness" >Quickness</th>
                             <td><input type="text" class="sheet-heading_2" name="attr_Quickness_Description"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Quickness_Score" value="0"/></td>
                             <td><input type="text" class="sheet-number_1" name="attr_Quickness_Aging" value="0"/></td>
-                            <td><button type="roll" class="sheet-button" name="roll_Quickness" value="&{template:ability} {{name= @{character_name}}} {{label0=^{quickness}}} {{banner=@{Presence_Description}}} {{label1=^{score}}} {{result1=@{Quickness_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Quickness_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td><button type="roll" class="sheet-button" name="roll_Quickness" value="&{template:ability} {{name= @{character_name}}} {{label0=^{quickness}}} {{banner=@{Presence_Description}}} {{label1=^{score}}} {{result1=@{Quickness_Score}}} {{label2=^{characteristic-m}}} {{label2=^{weakness-m}}} {{result2=[[@{Fatigue} + @{wound_total}]]}} {{label3=^{circumstances-m}}} {{result3=[[(?{@{circumstantial_i18n}|0})]]}} {{result0=[[ 1d10 + @{Quickness_Score} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                         </tr>
                     </table>
                 </div>
@@ -482,7 +482,7 @@
                 <fieldset class="repeating_ability">
                     <table class="sheet-table_2" style="width:400px;">
                         <tr>
-                            <td width="30px"><button type="roll" class="sheet-button" name="roll_ability" value="&{template:ability} {{name= @{character_name}}} {{label4=Circumstances}} {{result4=[[(?{@{circumstantial_i18n}|0})]]}} {{label0=@{Ability_name}}} {{banner=@{Ability_Speciality}}} {{label1=^{rank}}} {{result1= [[ @{Ability_Score} + @{Ability_Puissant} ]]}} {{label2=^{characteristic-m}}} {{result2=[[@{Ability_Characteristic}]]}} {{label3=^{weakness}}} {{result3=[[@{Fatigue} + @{wound_total}]]}} {{result0=[[ 1d10 + @{Ability_Score} + @{Ability_Puissant} + @{Ability_Characteristic} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
+                            <td width="30px"><button type="roll" class="sheet-button" name="roll_ability" value="&{template:ability} {{name= @{character_name}}} {{label4=Circumstances}} {{result4=[[(?{@{circumstantial_i18n}|0})]]}} {{label0=@{Ability_name}}} {{banner=@{Ability_Speciality}}} {{label1=^{rank}}} {{result1= [[ @{Ability_Score} + @{Ability_Puissant} ]]}} {{label2=^{characteristic-m}}} {{result2=[[@{Ability_Characteristic}]]}} {{label3=^{weakness-m}}} {{result3=[[@{Fatigue} + @{wound_total}]]}} {{result0=[[ 1d10 + @{Ability_Score} + @{Ability_Puissant} + @{Ability_Characteristic} + @{wound_total} + @{Fatigue} + (?{@{circumstantial_i18n}|0})]]}}"></button></td>                            
                             <td width="240px"><input type="text" style="width:220px;" class="sheet-heading_4" name="attr_Ability_name"/></td>
                             <td><input type="number" class="sheet-number_2" name="attr_Ability_TotalScore" value="[[(@{Ability_Score}) + (@{Ability_Puissant})]]" disabled="true" /></td>
                             <th><div style="width:40px;"><input type="checkbox" class="sheet-hider sheet-checkbox_1" name="attr_Ability_show" value="1" checked/><span></span></div></th>
@@ -672,7 +672,7 @@
             </tr>
             <tr>
                 <td data-i18n="fatiguing" >Fatiguing</td>
-                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Spontaneous1" value="&{template:arcane} {{^{spontaneous} ^{casting}}} {{result0=[[(1d10+ @{Spontaneous1_Technique} + @{Spontaneous1_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} + (?{@{modifiers_i18n}|0}))/2  ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness}}} {{result2=[[@{wound_total} + @{fatigue}]]}} {{label3=^{circumstances-m}}} {{result3=(?{@{modifiers_i18n}|0})}}"></button></td>
+                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Spontaneous1" value="&{template:arcane} {{^{spontaneous} ^{casting}}} {{result0=[[(1d10+ @{Spontaneous1_Technique} + @{Spontaneous1_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} + (?{@{modifiers_i18n}|0}))/2  ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness-m}}} {{result2=[[@{wound_total} + @{fatigue}]]}} {{label3=^{circumstances-m}}} {{result3=(?{@{modifiers_i18n}|0})}}"></button></td>
                 <td><input type="number" class="sheet-number_2" name="attr_Spontaneous1" value="(@{Spontaneous1_Technique} + @{Spontaneous1_Form} + @{Stamina_Score} + @{aura})/2" disabled="true"/></td>
                 <td>
                     <select class="sheet-select_1" name="attr_Spontaneous1_Technique">
@@ -706,7 +706,7 @@
             </tr>
             <tr>
                 <td data-i18n="ceremonial" >Ceremonial</td>
-                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Ceremonial" value="&{template:arcane} {{label0=^{ceremonial} ^{casting}}} {{result0=[[(1d10 + @{Ceremonial_Technique} + @{Ceremonial_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} + @{Ceremonial_Artes_Lib} + @{Ceremonial_Philos} + (?{@{modifiers_i18n}|0}))/2  ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness}}} {{result2=[[@{wound_total} + @{fatigue}]]}} {{label3=^{circumstances-m}}} {{result3=(?{@{modifiers_i18n}|0})}}"></button></td>
+                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Ceremonial" value="&{template:arcane} {{label0=^{ceremonial} ^{casting}}} {{result0=[[(1d10 + @{Ceremonial_Technique} + @{Ceremonial_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} + @{Ceremonial_Artes_Lib} + @{Ceremonial_Philos} + (?{@{modifiers_i18n}|0}))/2  ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness-m}}} {{result2=[[@{wound_total} + @{fatigue}]]}} {{label3=^{circumstances-m}}} {{result3=(?{@{modifiers_i18n}|0})}}"></button></td>
                 <td><input type="number" class="sheet-number_2" name="attr_Ceremonial" value="(@{Ceremonial_Technique} + @{Ceremonial_Form} + @{Stamina_Score} + @{aura} + @{Ceremonial_Artes_Lib} + @{Ceremonial_Philos})/2" disabled="true"/></td>
                 <td>
                     <select class="sheet-select_1" name="attr_Ceremonial_Technique">
@@ -780,7 +780,7 @@
             </tr>
             <tr>
                 <td data-i18n="formulaic" >Formulaic</td>
-                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Formulaic" value="&{template:arcane} {{label0=^{formulaic} ^{casting}}} {{result0=[[1d10 + @{Formulaic_Technique} + @{Formulaic_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness}}} {{result2=[[@{wound_total} + @{fatigue}]]}}"></button></td>
+                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Formulaic" value="&{template:arcane} {{label0=^{formulaic} ^{casting}}} {{result0=[[1d10 + @{Formulaic_Technique} + @{Formulaic_Form} + @{Stamina_Score} + @{aura} + @{Fatigue} + @{wound_total} ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness-m}}} {{result2=[[@{wound_total} + @{fatigue}]]}}"></button></td>
                 <td><input type="number" class="sheet-number_2" name="attr_Formulaic" value="@{Formulaic_Technique} + @{Formulaic_Form} + @{Stamina_Score} + @{aura}" disabled="true"/></td>
                 <td>
                     <select class="sheet-select_1" name="attr_Formulaic_Technique">
@@ -814,7 +814,7 @@
             </tr>
             <tr>
                 <td data-i18n="ritual" >Ritual</td>
-                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Formulaic" value="&{template:arcane} {{label0=^{ritual} ^{casting}}} {{result0=[[1d10 + @{Ritual_Technique} + @{Ritual_Form} + @{Stamina_Score} + @{aura} + @{Ritual_Artes_Lib} + @{Ritual_Philos} ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness}}} {{result2=[[@{wound_total} + @{fatigue}]]}}"></button></td>
+                <td><button style="margin: 0px auto;" type="roll" class="sheet-button" name="roll_Formulaic" value="&{template:arcane} {{label0=^{ritual} ^{casting}}} {{result0=[[1d10 + @{Ritual_Technique} + @{Ritual_Form} + @{Stamina_Score} + @{aura} + @{Ritual_Artes_Lib} + @{Ritual_Philos} ]] }} {{label1=^{aura}}} {{result1=@{aura}}} {{label2=^{weakness-m}}} {{result2=[[@{wound_total} + @{fatigue}]]}}"></button></td>
                 <td><input type="number" class="sheet-number_2" name="attr_Ritual" value="@{Ritual_Technique} + @{Ritual_Form} + @{Stamina_Score} + @{aura} + @{Ritual_Artes_Lib} + @{Ritual_Philos}" disabled="true"/></td>
                 <td>
                     <select class="sheet-select_1" name="attr_Ritual_Technique">
