Ambitions & Avarice: v.1.0; button styling, last fixes for publishing

--- a/Ambition_Avarice/ambition_avarice.html
+++ b/Ambition_Avarice/ambition_avarice.html
@@ -2,8 +2,6 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Equipment"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="NPC"></span>
 
-<!-- <span class="version bold">Sheet Version: 0.9</span> -->
-
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- PAGE 1 ---------------------------------------------- -->
 <!--  --------------------------------------------------------------------------------- -->
@@ -52,42 +50,42 @@
       <label>Strength</label>
       <input name="attr_str" type="number" value="" placeholder="10">
       <span name="attr_str_mod"></span>
-      <button name="roll_str" type="roll" value="&{template:default} {{name= **Strength** (Test)}} {{Roll= [[1d20+(@{str_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_str" type="roll" value="&{template:default} {{name= **Strength** (Test)}} {{Roll= [[1d20+(@{str_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Dexterity</label>
       <input name="attr_dex" type="number" value="" placeholder="10">
       <span name="attr_dex_mod"></span>
-      <button name="roll_dex" type="roll" value="&{template:default} {{name= **Dexterity** (Test)}} {{Roll= [[1d20+(@{dex_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_dex" type="roll" value="&{template:default} {{name= **Dexterity** (Test)}} {{Roll= [[1d20+(@{dex_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Constitution</label>
       <input name="attr_con" type="number" value="" placeholder="10">
       <span name="attr_con_mod"></span>
-      <button name="roll_con" type="roll" value="&{template:default} {{name= **Constitution** (Test)}} {{Roll= [[1d20+(@{con_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_con" type="roll" value="&{template:default} {{name= **Constitution** (Test)}} {{Roll= [[1d20+(@{con_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Intelligence</label>
       <input name="attr_int" type="number" value="" placeholder="10">
       <span name="attr_int_mod"></span>
-      <button name="roll_int" type="roll" value="&{template:default} {{name= **Intelligence** (Test)}} {{Roll= [[1d20+(@{int_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_int" type="roll" value="&{template:default} {{name= **Intelligence** (Test)}} {{Roll= [[1d20+(@{int_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Wisdom</label>
       <input name="attr_wis" type="number" value="" placeholder="10">
       <span name="attr_wis_mod"></span>
-      <button name="roll_wis" type="roll" value="&{template:default} {{name= **Wisdom** (Test)}} {{Roll= [[1d20+(@{wis_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_wis" type="roll" value="&{template:default} {{name= **Wisdom** (Test)}} {{Roll= [[1d20+(@{wis_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Charisma</label>
       <input name="attr_cha" type="number" value="" placeholder="10">
       <span name="attr_cha_mod"></span>
-      <button name="roll_cha" type="roll" value="&{template:default} {{name= **Charisma** (Test)}} {{Roll= [[1d20+(@{cha_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_cha" type="roll" value="&{template:default} {{name= **Charisma** (Test)}} {{Roll= [[1d20+(@{cha_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
     
   </div>
@@ -117,8 +115,8 @@
         </div>
 
         <div class="rowflex nowrap">
-          <button name="roll_rest" type="roll" value=" &{template:default} {{name=**Rest**}} {{You recover [[1d@{rest}]] hp}}" class="empty">Rest Roll</button>
-          <input name="attr_rest" type="text" style="width:30px;" value="6">
+          <button name="roll_rest" type="roll" value=" &{template:default} {{name=**Rest**}} {{You recover [[1d@{rest}]] hp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}}" class="empty">Rest Roll</button>
+          <input name="attr_rest" type="number" style="width:30px;" value="" placeholder="6">
         </div>
       </div>
     </div>
@@ -130,8 +128,8 @@
           <input name="attr_to_hit" type="number" value="" placeholder="1" style="width:35px;">
         </div>
       </div>
-      <button name="roll_" type="roll" value=" &{template:default} {{name=**Attack(Melee/Thrown)**}} {{Attack=[[d20+(@{str_mod}[STR MOD]+@{to_hit}[TO HIT BONUS])]]}}" style="margin-bottom:5px;">Melee</button>
-      <button name="roll_" type="roll" value=" &{template:default} {{name=**Attack(Ranged)**}} {{Attack=[[d20+(@{dex_mod}[DEX MOD]+@{to_hit}[TO HIT BONUS])]]}}">Ranged</button>
+      <button name="roll_melee" type="roll" value=" &{template:default} {{name=**Attack(Melee/Thrown)**}} {{Attack=[[d20+(@{str_mod}[STR MOD]+@{to_hit}[TO HIT BONUS])]]}}" style="margin-bottom:5px;">Melee</button>
+      <button name="roll_ranged" type="roll" value=" &{template:default} {{name=**Attack(Ranged)**}} {{Attack=[[d20+(@{dex_mod}[DEX MOD]+@{to_hit}[TO HIT BONUS])]]}}">Ranged</button>
     </div>
 
     <div class="columnflex nowrap center">
@@ -149,8 +147,8 @@
     <div class="columnflex nowrap center buttons">
         <label class="title" style="width: 50px;">Init</label>
         <input name="attr_init_race" type="number" value="0" class="short">
-        <button name="roll_" type="roll" value=" &{template:default} {{name=**Initiative**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])+(@{init_race}[INIT BONUS])]]}} &{tracker}" class="d10">Init</button>
-        <button name="roll_" type="roll" value=" &{template:default} {{name=**Suprise**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])]]}}" class="d10">Suprise</button>   
+        <button name="roll_init" type="roll" value=" &{template:default} {{name=**Initiative**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])+(@{init_race}[INIT BONUS])]]}} &{tracker}" class="d10">Init</button>
+        <button name="roll_suprise" type="roll" value=" &{template:default} {{name=**Suprise**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])]]}}" class="d10">Suprise</button>   
     </div>
   </div>
 
@@ -161,36 +159,36 @@
     <div class="rowflex nowrap">
       <label>blast</label>
       <input name="attr_blast" type="number" value="" placeholder="0">
-      <button name="roll_blast" type="roll" value="&{template:default} {{name=**Blast** (Saving Throw)}} {{You attempt: [[1d20>@{blast}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_blast" type="roll" value="&{template:default} {{name=**Blast** (Saving Throw)}} {{You attempt: [[1d20>@{blast}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
     <div class="rowflex nowrap">
       <label>death</label>
       <input name="attr_death" type="number" value="" placeholder="0">
-      <button name="roll_death" type="roll" value="&{template:default} {{name=**Death** (Saving Throw)}} {{You attempt: [[1d20>@{death}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_death" type="roll" value="&{template:default} {{name=**Death** (Saving Throw)}} {{You attempt: [[1d20>@{death}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>paralysis</label>
       <input name="attr_paralysis" type="number" value="" placeholder="0">
-      <button name="roll_paralysis" type="roll" value="&{template:default} {{name=**Paralysis** (Saving Throw)}} {{You attempt: [[1d20>@{paralysis}]]}} "></button>
+      <button name="roll_paralysis" type="roll" value="&{template:default} {{name=**Paralysis** (Saving Throw)}} {{You attempt: [[1d20>@{paralysis}]]}} " class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>poison</label>
       <input name="attr_poison" type="number" value="" placeholder="0">
-      <button name="roll_poison" type="roll" value="&{template:default} {{name=**Poison** (Saving Throw)}} {{You attempt: [[1d20>@{poison}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_poison" type="roll" value="&{template:default} {{name=**Poison** (Saving Throw)}} {{You attempt: [[1d20>@{poison}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>reflex</label>
       <input name="attr_reflex" type="number" value="" placeholder="0">
-      <button name="roll_reflex" type="roll" value="&{template:default} {{name=**Reflex** (Saving Throw)}} {{You attempt: [[1d20>@{reflex}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_reflex" type="roll" value="&{template:default} {{name=**Reflex** (Saving Throw)}} {{You attempt: [[1d20>@{reflex}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>spells</label>
       <input name="attr_spells" type="number" value="" placeholder="0">
-      <button name="roll_spells" type="roll" value="&{template:default} {{name=**Spells** (Saving Throw)}} {{You attempt: [[1d20>@{spells}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_spells" type="roll" value="&{template:default} {{name=**Spells** (Saving Throw)}} {{You attempt: [[1d20>@{spells}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
     
     <div class="note rowflex nowrap">
@@ -207,37 +205,37 @@
     <div class="rowflex nowrap">
       <label class="short">climb</label>
       <input name="attr_climb" type="number" value="" placeholder="0">
-      <button name="roll_climb" type="roll" value=" &{template:default} {{name=**Climb** (Dungeon Throw)}} {{You attempt: [[1d20>@{climb}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_climb" type="roll" value=" &{template:default} {{name=**Climb** (Dungeon Throw)}} {{You attempt: [[1d20>@{climb}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label class="short">force</label>
       <input name="attr_force" type="number" value="" placeholder="0">
-      <button name="roll_force" type="roll" value=" &{template:default} {{name=**Force** (Dungeon Throw)}} {{You attempt: [[1d20>@{force}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_force" type="roll" value=" &{template:default} {{name=**Force** (Dungeon Throw)}} {{You attempt: [[1d20>@{force}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label class="short">locks</label>
       <input name="attr_locks" type="number" value="" placeholder="0">
-      <button name="roll_locks" type="roll" value=" &{template:default} {{name=**Locks** (Dungeon Throw)}} {{You attempt: [[1d20>@{locks}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_locks" type="roll" value=" &{template:default} {{name=**Locks** (Dungeon Throw)}} {{You attempt: [[1d20>@{locks}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label class="short">notice</label>
       <input name="attr_notice" type="number" value="" placeholder="0">
-      <button name="roll_notice" type="roll" value=" &{template:default} {{name=**Notice** (Dungeon Throw)}} {{You attempt: [[1d20>(@{notice})]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_notice" type="roll" value=" &{template:default} {{name=**Notice** (Dungeon Throw)}} {{You attempt: [[1d20>(@{notice})]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label class="short">sneak</label>
       <input name="attr_sneak" type="number" value="" placeholder="0">
-      <button name="roll_sneak" type="roll" value=" &{template:default} {{name=**Sneak** (Dungeon Throw)}} {{You attempt: [[1d20>@{sneak}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_sneak" type="roll" value=" &{template:default} {{name=**Sneak** (Dungeon Throw)}} {{You attempt: [[1d20>@{sneak}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label class="short">traps</label>
       <input name="attr_traps" type="number" value="" placeholder="0">
-      <button name="roll_traps" type="roll" value=" &{template:default} {{name=**Traps** (Dungeon Throw)}} {{You attempt: [[1d20>@{traps}]]}} {{( 1 is success, 0 is failure) }}"></button>
+      <button name="roll_traps" type="roll" value=" &{template:default} {{name=**Traps** (Dungeon Throw)}} {{You attempt: [[1d20>@{traps}]]}} {{( 1 is success, 0 is failure) }}" class="d20"></button>
     </div>
   </div>
 
@@ -525,10 +523,10 @@
   <div class="columnflex nowrap center npc-buttons">
     <label class="title" style="width: 50px;">Init</label>
     <input name="attr_init_race" type="number" value="0" class="short">
-    <button name="roll_" type="roll" value=" &{template:default} {{name=**Initiative**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])+(@{init_race}[INIT BONUS])]]}} &{tracker}" class="d10">Init</button>
-    <button name="roll_" type="roll" value=" &{template:default} {{name=**Suprise**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])]]}}" class="d10">Suprise</button>
-    <button name="roll_" type="roll" value=" &{template:default} {{name=**Attack(Melee/Thrown)**}} {{Attack=[[d20+(@{str_mod}[STR MOD]+@{to_hit}[TO HIT BONUS])]]}}">Melee</button>
-    <button name="roll_" type="roll" value=" &{template:default} {{name=**Attack(Ranged)**}} {{Attack=[[d20+(@{dex_mod}[DEX MOD]+@{to_hit}[TO HIT BONUS])]]}}">Ranged</button>
+    <button name="roll_init" type="roll" value=" &{template:default} {{name=**Initiative**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])+(@{init_race}[INIT BONUS])]]}} &{tracker}" class="d10">Init</button>
+    <button name="roll_suprise" type="roll" value=" &{template:default} {{name=**Suprise**}} {{Roll=[[d10+(@{wis_mod}[WIS MOD])]]}}" class="d10">Suprise</button>
+    <button name="roll_melee" type="roll" value=" &{template:default} {{name=**Attack(Melee/Thrown)**}} {{Attack=[[d20+(@{str_mod}[STR MOD]+@{to_hit}[TO HIT BONUS])]]}}">Melee</button>
+    <button name="roll_ranged" type="roll" value=" &{template:default} {{name=**Attack(Ranged)**}} {{Attack=[[d20+(@{dex_mod}[DEX MOD]+@{to_hit}[TO HIT BONUS])]]}}">Ranged</button>
   </div>
 
   <!-- dulicate of Attrs -->
@@ -539,42 +537,42 @@
       <label>Str</label>
       <input name="attr_str" type="number" value="" placeholder="10">
       <span name="attr_str_mod"></span>
-      <button name="roll_str" type="roll" value="&{template:default} {{name= **Strength** (Test)}} {{Roll= [[1d20+(@{str_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_str" type="roll" value="&{template:default} {{name= **Strength** (Test)}} {{Roll= [[1d20+(@{str_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Dex</label>
       <input name="attr_dex" type="number" value="" placeholder="10">
       <span name="attr_dex_mod"></span>
-      <button name="roll_dex" type="roll" value="&{template:default} {{name= **Dexterity** (Test)}} {{Roll= [[1d20+(@{dex_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_dex" type="roll" value="&{template:default} {{name= **Dexterity** (Test)}} {{Roll= [[1d20+(@{dex_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Con</label>
       <input name="attr_con" type="number" value="" placeholder="10">
       <span name="attr_con_mod"></span>
-      <button name="roll_con" type="roll" value="&{template:default} {{name= **Constitution** (Test)}} {{Roll= [[1d20+(@{con_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_con" type="roll" value="&{template:default} {{name= **Constitution** (Test)}} {{Roll= [[1d20+(@{con_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Int</label>
       <input name="attr_int" type="number" value="" placeholder="10">
       <span name="attr_int_mod"></span>
-      <button name="roll_int" type="roll" value="&{template:default} {{name= **Intelligence** (Test)}} {{Roll= [[1d20+(@{int_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_int" type="roll" value="&{template:default} {{name= **Intelligence** (Test)}} {{Roll= [[1d20+(@{int_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Wis</label>
       <input name="attr_wis" type="number" value="" placeholder="10">
       <span name="attr_wis_mod"></span>
-      <button name="roll_wis" type="roll" value="&{template:default} {{name= **Wisdom** (Test)}} {{Roll= [[1d20+(@{wis_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_wis" type="roll" value="&{template:default} {{name= **Wisdom** (Test)}} {{Roll= [[1d20+(@{wis_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
 
     <div class="rowflex nowrap">
       <label>Cha</label>
       <input name="attr_cha" type="number" value="" placeholder="10">
       <span name="attr_cha_mod"></span>
-      <button name="roll_cha" type="roll" value="&{template:default} {{name= **Charisma** (Test)}} {{Roll= [[1d20+(@{cha_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}"></button>
+      <button name="roll_cha" type="roll" value="&{template:default} {{name= **Charisma** (Test)}} {{Roll= [[1d20+(@{cha_mod})]]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}} {{ d20 + mod vs DC&nbsp;&nbsp;&nbsp;}}" class="d20"></button>
     </div>
   </div>
 
