--- a/Our Last Best Hope/ourlastbesthope.html
+++ b/Our Last Best Hope/ourlastbesthope.html
@@ -1,3 +1,8 @@
+<div class="charsheet">
+    
+<div class="logo">
+    <img src="https://raw.githubusercontent.com/stephanieroll20/roll20-character-sheets/sb-ourlastbesthope/Our%20Last%20Best%20Hope/logo.png" alt="Our Last Best Hope logo"/>
+</div>
 <div class="body">
     <p class="header">
         <span data-i18n="name"></span>: <input type="text" name="attr_character_name" class="fields">
@@ -40,3 +45,5 @@
 </div>
 <hr>
 <div class="credits"><span data-i18n="credits"></span></div>
+
+</div>
